--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<meta name="author" content="Cody Wilder">
+		<meta name="description" content="This is the front page for a website featuring and advertising the baking talents of Amelie Boulangerie with information on how to get in touch with her.">
+		<link rel="icon" type="image/ico" href="favicon.ico">
 		<title>Amelie Boulangerie</title>
 		<link href="styles.css" rel="stylesheet">
 	</head>
@@ -20,6 +23,7 @@
 			</nav>
 			<main>
 				<h2>Experience the Difference</h2>
+				<img src="cafe-counter.jpg" alt="Amelie at work">
 				<p>Amelie Boulangerie is the master of flavor combinations. The jewel-colored macarons come in the most tempting of flavors. Experience the difference at Amelie Boulangerie.</p>
 			
 				<ul>
